revise jacoco task